# datagen

./: CMakeLists.txt  readme.md
graph/: cdf.py
src/: RSModifyperfect.cpp  combinetrace.cpp  generator.cpp  gentrace.cpp  main.cpp  perflinear.cpp  samplegen.h  test.ipynb  trace_helper.h  unique.cpp  uniquecsv.cpp  utils.h  zipf.h
